grammar/funlang.ebnf
(* ============================================================================
   FunLang - Gramática E-BNF (Simplificada)
   Compatible con https://www.bottlecaps.de/rr/ui
   ============================================================================ *)

(* ===== PROGRAMA ===== *)
Program       ::= Declaration+

Declaration   ::= FunctionDecl
                | VarDecl

(* ===== VARIABLES GLOBALES ===== *)
VarDecl       ::= 'let' IDENTIFIER '=' Expression

(* ===== FUNCIONES ===== *)
FunctionDecl  ::= IDENTIFIER ParamList? '=' Expression

ParamList     ::= IDENTIFIER+

(* ===== EXPRESIONES ===== *)
Expression    ::= IfExpr
                | DoBlock
                | OrExpr

(* ===== IF-THEN-ELSE ===== *)
IfExpr        ::= 'if' Expression 'then' Expression 'else' Expression

(* ===== DO BLOCK ===== *)
DoBlock       ::= 'do' Statement+ 'end'

Statement     ::= 'let' IDENTIFIER '=' Expression
                | 'return' Expression
                | Expression

(* ===== OPERADORES LÓGICOS ===== *)
OrExpr        ::= AndExpr ('||' AndExpr)*

AndExpr       ::= Comparison ('&&' Comparison)*

(* ===== COMPARACIONES ===== *)
Comparison    ::= Additive (CompOp Additive)*

CompOp        ::= '==' | '!=' | '<' | '>' | '<=' | '>='

(* ===== ARITMÉTICOS ===== *)
Additive      ::= Multiplicative (('+' | '-') Multiplicative)*

Multiplicative ::= Unary (('*' | '/' | '%') Unary)*

Unary         ::= '-' Unary
                | '!' Unary
                | Call

(* ===== LLAMADAS A FUNCIÓN ===== *)
Call          ::= IDENTIFIER '(' ArgList? ')'
                | Primary

ArgList       ::= Expression (',' Expression)*

(* ===== PRIMARIOS ===== *)
Primary       ::= INTEGER
                | FLOAT
                | STRING
                | 'True'
                | 'False'
                | IDENTIFIER
                | RangeExpr
                | '(' Expression ')'

(* ===== RANGOS ===== *)
RangeExpr     ::= '[' Expression '..' Expression ']'

(* ===== TOKENS ===== *)
IDENTIFIER    ::= [a-zA-Z_][a-zA-Z0-9_]*

INTEGER       ::= [0-9]+

FLOAT         ::= [0-9]+ '.' [0-9]+

STRING        ::= '"' [^"]* '"'

(* ===== COMENTARIOS ===== *)
COMMENT       ::= '--' [^\n]*
